--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -13,7 +13,7 @@ build_targets:
       - sdkmanager --install platform-tools
       - sdkmanager --install build-tools;28.0.3
       - sdkmanager --install platforms;android-28
-      - sdkmanager --install system-images;android-28;default;x86_64
+      #- sdkmanager --install system-images;android-28;default;x86_64
       - ./gradlew jacocoTestReport coveralls
 ci:
   builds:
